--- a/my-project/index.html
+++ b/my-project/index.html
@@ -134,7 +134,8 @@
       />
     </section>
     <span id="attractions"></span>
-
+    <br class="select-none" />
+    <br class="select-none" />
     <section class="section">
       <br class="select-none" />
       <br class="select-none" />
@@ -321,7 +322,7 @@
             Château de Versailles
           </h3>
           <a
-            href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.chateauversailles.fr%2F&psig=AOvVaw3f5tGlCXSsR3jscXdcJj9H&ust=1648834542304000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCKjwrPTy8PYCFQAAAAAdAAAAABAK"
+            href="https://en.chateauversailles.fr/"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -390,7 +391,7 @@
             Cité de Carcassonne
           </h3>
           <a
-            href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tourism-carcassonne.co.uk%2Fdiscover%2Fthe-medieval-city&psig=AOvVaw2AL8tgcoMXbqFEZxJ3OS2m&ust=1649179851093000&source=images&cd=vfe&ved=0CAcQjRxqFwoTCMje74j3-vYCFQAAAAAdAAAAABAD"
+            href="https://www.tourism-carcassonne.co.uk/discover/the-medieval-city"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -990,7 +991,7 @@
         <div class="hidden animate-fade-in">
           <img
             src="https://imageio.forbes.com/specials-images/imageserve/61840c42136639346edc90fa/Interior-of-three-star-Michelin-restaurant-Le-Cinq-at-Four-Seasons-George-V-Hotel/960x0.jpg?fit=bounds&format=jpg&width=960"
-            class="w-full align-middle select-none"
+            class="w-full align-middle select-none max-h-4/5"
           />
           <div
             class="
@@ -1022,7 +1023,7 @@
         <div class="hidden animate-fade-in">
           <img
             src="https://www.sortiraparis.com/images/80/91506/572398-le-waldorf-astoria-trianon-palace-un-ecrin-royal-au-coeur-du-parc-de-versailles-facade.jpg"
-            class="w-full align-middle select-none"
+            class="w-full align-middle select-none max-h-4/5"
           />
           <div
             class="
@@ -1149,6 +1150,7 @@
 
         <a
           class="
+            prev
             cursor-pointer
             absolute
             top-1/2
@@ -1160,7 +1162,6 @@
             text-lg
             rounded-sm
             select-none
-            hover:bg-gray-300
             duration-700
           "
           onclick="plusSlides(-1)"
@@ -1168,6 +1169,7 @@
         >
         <a
           class="
+            next
             cursor-pointer
             absolute
             top-1/2
@@ -1180,7 +1182,6 @@
             rounded-sm
             select-none
             right-0
-            hover:bg-gray-300
             bg-opacity-100
             duration-700
           "
