--- a/my-project/index.html
+++ b/my-project/index.html
@@ -392,7 +392,7 @@
             Cité de Carcassonne
           </h3>
           <a
-            href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tourism-carcassonne.co.uk%2Fdiscover%2Fthe-medieval-city&psig=AOvVaw2AL8tgcoMXbqFEZxJ3OS2m&ust=1649179851093000&source=images&cd=vfe&ved=0CAcQjRxqFwoTCMje74j3-vYCFQAAAAAdAAAAABAD"
+            href="https://www.tourism-carcassonne.co.uk/"
             target="_blank"
             rel="noopener noreferrer"
           >
