--- a/my-project/index.html
+++ b/my-project/index.html
@@ -241,25 +241,34 @@
           <p
             class="text-white font-cormorant_garamond text-sm pl-10 pr-10 text-center"
           >
-            It was built from 1887 to 1889 as the centerpiece of the 1889
-            World's Fair and was initially condemned for its design by some of
-            France's top artists and philosophers, but it has since become a
-            global cultural icon of France and one of the most recognizable
-            structures in the world. The Eiffel Tower is the most visited
-            paid-entry monument in the world, with 6.91 million visitors in
-            2015. In 1964, the Tower was designated as a historic monument, and
-            in 1991, it was included as part of the UNESCO World Heritage Site
-            "Paris, Banks of the Seins." The tower is 330 meters (1,083 feet)
-            tall, about the same as an 81-story building, and it is the tallest
-            structure in the world The tower is 330 meters (1,083 feet) tall,
-            about the same as an 81-story skyscraper, and it is Paris' highest
-            structure. It has a square foundation that measures 125 meters (410
-            feet) on each side. The Eiffel Tower eclipsed the Washington
-            Monument during construction to become the world's highest man-made
-            structure, a title it held for 41 years until the Chrysler Building
-            in New York City was completed in 1930. It was the first structure
-            in the world to reach heights of more than 200 meters and 300
-            meters.
+            The Cité de Carcassonne is a medieval fortress located in the French
+            city of Carcassonne, in the Aude department, Occitanie region. It is
+            located on a hill on the right bank of the Aude River in the city's
+            southeast section. Because of its unique witness to the architecture
+            and design of a medieval fortified town, the citadel was rebuilt at
+            the end of the 19th century and inscribed to the UNESCO list of
+            World Heritage Sites in 1997.The citadel was built during the
+            Gallo-Roman period and is known for its three-kilometer-long double
+            encircling walls with 52 towers. The town has a 2,500-year history
+            and has been occupied by Romans, Visigoths, and Crusaders at various
+            times. It was a Gaulish community at the start of its existence, but
+            in the third century AD, the Romans opted to turn it into a walled
+            town. By 333 AD, when the settlement was characterized as a
+            castellum, the Roman defenses were in place. The original walls were
+            supported by between 34 and 40 towers, spaced from 18 to 30 metres
+            apart along the curtain wall. Each tower was semicircular in plan
+            and around 14 metres tall.With several construction projects,
+            Bernard Aton IV Trencavel, vicomte of Albi, Nîmes, and Béziers,
+            brought prosperity to the city. In Languedoc, a new sect known as
+            Catharism arose around this time. With Pope Urban II's blessing, the
+            Viscount of Trencavel authorized the construction of the Basilica of
+            Saint-Nazaire in 1096. In 1107, the citizens revolted against his
+            rule and petitioned Count Ramon Berenguer III of Barcelona to depose
+            him. Bernard Aton regained control of the Cité with the support of
+            Bertrand, Count of Toulouse. A second insurrection occurred in 1120,
+            but Bernard Aton restored control a few years later. In 1130, he
+            began work on a palace for himself as well as the rebuilding of
+            Gallo-Roman defenses. 
           </p>
         </div>
       </div>
@@ -288,24 +297,51 @@
           <p
             class="text-white font-cormorant_garamond text-sm pl-10 pr-10 text-center"
           >
-            The Palace of Versailles is a former royal home in Versailles,
-            France, located about 12 miles (19 kilometers) west of Paris. The
-            French Republic owns the palace, which has been managed by the
-            Public Establishment of the Palace, Museum, and National Estate of
-            Versailles since 1995, under the leadership of the French Ministry
-            of Culture. Every year, 15,000,000 people visit the Palace, Park,
-            and Gardens of Versailles, making it one of the world's most popular
-            tourist destinations. In 1623, Louis XIII constructed a primitive
-            hunting lodge on the site of the Palace of Versailles, which was
-            rebuilt in 1631-34 by a tiny château. From 1661 to 1715, Louis XIV
-            transformed the château into a palace in stages. Both kings favored
-            it, and in 1682, Louis XIV moved the seat of his court and
-            government to Versailles, effectively making the palace the de facto
-            capital of France. Kings Louis XV and Louis XVI maintained this
-            state of affairs, mostly making interior changes to the palace, but
-            the royal family and capital of France returned to Paris in 1789.
+            Chartres Cathedral, also known as the Cathedral of Our Lady of
+            Chartres (French: Cathédrale Notre-Dame de Chartres), is the seat of
+            the Bishop of Chartres and is located in Chartres, France, some 80
+            kilometers (50 miles) southwest of Paris. It lies on the site of at
+            least five cathedrals that have occupied the site since the Diocese
+            of Chartres was constituted as an episcopal see in the 4th century.
+            It was mostly built between 1194 and 1220. It's in the styles of
+            High Gothic and Romanesque. In 1979, UNESCO designated the cathedral
+            as a World Heritage Site, calling it "the pinnacle of French Gothic
+            art" and a "masterpiece." The cathedral has been well-preserved and
+            renovated, with the bulk of the original stained glass windows
+            intact and only minimal changes to the building since the early 13th
+            century. The exterior of the building is dominated by heavy flying
+            buttresses, which allowed the architects to significantly increase
+            the window size, while the west end is dominated by two contrasting
+            spires a 105-metre (349-foot) plain pyramid completed around 1160
+            and a 113-metre (377-foot) early 16th-century Flamboyant spire on
+            top of an older tower. The three huge façades, each embellished with
+            hundreds of carved figures depicting significant theological themes
+            and histories, are also noteworthy. The cathedral has been a popular
+            tourist site since at least the 12th century. The layout, like that
+            of other Gothic cathedrals, is in the shape of a cross and was
+            influenced by the shape and size of the 11th-century Romanesque
+            cathedral beneath it, which has a crypt and remnants. At the western
+            end, a two-bay narthex leads to a seven-bay nave that leads to the
+            crossing, from which wide transepts extend three bays to the north
+            and south. Four rectangular bays end in a semicircular apse east of
+            the crossing. Single aisles flank the nave and transepts, widening
+            to a double-aisled ambulatory around the choir and apse. Three deep
+            semi-circular chapels radiate from the ambulatory (overlying
+            Fulbert's 11th-century crypt's deep chapels).The elevation was
+            bolder and more unique than the floor design, especially to the use
+            of the flying buttress to support the top walls. This is the first
+            time it has been seen in a Gothic cathedral. Double stone arches
+            connected the hefty stone columns to the walls, which were
+            reinforced by columns that looked like spokes on a wheel. These
+            columns are all fashioned from a single block of stone. The arches
+            press against the walls, counteracting the cathedral's interior's
+            outward force from the rib vaults. These vaults were also unique in
+            that they only had four compartments, as opposed to the six-part
+            vaults found in older Gothic churches. They were lighter and could
+            cover more ground.
           </p>
         </div>
+
         <div
           class="bg-black border-8 mx-48 border-yellow-500 rounded-xl text-6xl hover:translate-x-4 hover:translate-y-4 duration-100 col-start-2 col-span-5 row-span-1"
         >
@@ -329,25 +365,19 @@
           <p
             class="text-white font-cormorant_garamond text-sm pl-10 pr-10 text-center"
           >
-            It was built from 1887 to 1889 as the centerpiece of the 1889
-            World's Fair and was initially condemned for its design by some of
-            France's top artists and philosophers, but it has since become a
-            global cultural icon of France and one of the most recognizable
-            structures in the world. The Eiffel Tower is the most visited
-            paid-entry monument in the world, with 6.91 million visitors in
-            2015. In 1964, the Tower was designated as a historic monument, and
-            in 1991, it was included as part of the UNESCO World Heritage Site
-            "Paris, Banks of the Seins." The tower is 330 meters (1,083 feet)
-            tall, about the same as an 81-story building, and it is the tallest
-            structure in the world The tower is 330 meters (1,083 feet) tall,
-            about the same as an 81-story skyscraper, and it is Paris' highest
-            structure. It has a square foundation that measures 125 meters (410
-            feet) on each side. The Eiffel Tower eclipsed the Washington
-            Monument during construction to become the world's highest man-made
-            structure, a title it held for 41 years until the Chrysler Building
-            in New York City was completed in 1930. It was the first structure
-            in the world to reach heights of more than 200 meters and 300
-            meters.
+            Calanques National Park (French: Parc national des Calanques) is a
+            French national park in Bouches-du-Rhône, Southern France, located
+            on the Mediterranean coast. It was founded in 2012 and spans 520 km2
+            (201 sq mi), with 85 km2 (33 sq mi) of land and the rest being
+            marine.[1] It includes parts of the Massif des Calanques, which runs
+            between Marseille, Cassis, and La Ciotat.The Comité de défense des
+            Calanques was founded in 1923 with the goal of limiting the
+            development of industry in En-Vau. The groupement d'intérêt public
+            (GIP) des Calanques was established in 1999 to prepare for the
+            establishment of a national park. The GIP presented its first draft
+            for a national park eleven years later, and the third draft was
+            authorized in 2011. Prime Minister François Fillon signed the
+            proclamation establishing Calanques National Park on April 18, 2012.
           </p>
         </div>
       </div>
@@ -724,7 +754,9 @@
             >
               Waldorf Astoria Versailles - Trianon Palace</a
             >
+            <p>The Waldorf Astoria</p>
           </div>
+          <div>The Waldorf Astoria</div>
         </div>
 
         <div class="hidden animate-fade-in">
