--- a/my-project/index.html
+++ b/my-project/index.html
@@ -56,13 +56,7 @@
       >Hotels</a
     >
     <button
-      class="
-        btn
-        hover:scale-110
-        transition-all
-        navigation-bar
-        select-none
-      "
+      class="btn hover:scale-110 transition-all navigation-bar select-none"
     >
       Change Theme
     </button>
@@ -94,12 +88,7 @@
         Centre-Val de Loire
       </h3>
       <div
-        class="
-          hide
-          float-right
-          border-slate-500 border-2
-          -translate-y-96 -translate-x-96
-        "
+        class="hide float-right border-slate-500 border-2 -translate-y-96 -translate-x-96"
       >
         <p>I love amongus</p>
 
@@ -113,12 +102,7 @@
       </div>
       <h3 class="regionname1 font-black translate-x-72">Nord-Pas-de-Calais</h3>
       <div
-        class="
-          hide1
-          float-right
-          border-slate-500 border-2
-          -translate-y-96 -translate-x-96
-        "
+        class="hide1 float-right border-slate-500 border-2 -translate-y-96 -translate-x-96"
       >
         <p>I love amongus</p>
         <img
@@ -805,7 +789,7 @@
             class="w-full align-middle select-none max-h-4/5"
           />
           <div
-            class="text-3xl pt-2 pb-2 pl-3 pr-3 absolute bottom-2 text-center text-black font-parisienne border-4 border-slate-900 bg-white right-52"
+            class="text-3xl pt-2 pb-2 pl-3 pr-3 absolute bottom-2 text-center text-black font-parisienne border-4 border-slate-900 bg-white justify-self-center"
           >
             <a
               href="https://www.hilton.com/en/hotels/cdgtpwa-waldorf-astoria-versailles-trianon-palace/"
@@ -815,9 +799,17 @@
             >
               Waldorf Astoria Versailles - Trianon Palace</a
             >
-            <p>The Waldorf Astoria</p>
+            <p class="font-cormorant_garamond text-xl text-center">
+              Since 1910, the Trianon Palace has been a five-star venue with
+              spectacular neoclassical architecture. You will get a true sense
+              of place thanks to its grand gallery, which is lit by natural
+              light and designed with a subtle and contemporary touch. This
+              historic hotel has 85 rooms and 15 suites with spectacular views
+              of the park of Versailles or the hotel's grounds. The restaurants
+              and bar, as well as the famed Spa Guerlain and the Clemenceau
+              Ballroom, are all housed within one structure.
+            </p>
           </div>
-          <div>The Waldorf Astoria</div>
         </div>
 
         <div class="hidden animate-fade-in">
@@ -826,7 +818,7 @@
             class="w-full align-middle select-none"
           />
           <div
-            class="text-3xl pt-2 pb-2 pl-3 pr-3 absolute bottom-2 text-center text-black font-parisienne border-4 border-slate-900 bg-white max-w-xs left-96"
+            class="text-3xl pt-2 pb-2 pl-3 pr-3 absolute bottom-2 text-center text-black font-parisienne border-4 border-slate-900 bg-white justify-self-center"
           >
             <a
               href="https://www.shangri-la.com/en/paris/shangrila/"
@@ -836,6 +828,16 @@
             >
               Shangri-La Paris</a
             >
+            <p class="font-cormorant_garamond text-xl text-center">
+              The old residence of Prince Roland Bonaparte, which overlooks the
+              Eiffel Tower and the Seine, exemplifies ultimate Parisian
+              grandeur. The "Palais" at No.10 avenue d'Iéna was reincarnated as
+              Shangri-La Paris in December 2010 after being meticulously
+              restored to its previous splendor. The hotel blends European
+              grandeur with traditional Asian hospitality and is centrally
+              positioned in the 16th arrondissement, minutes from the
+              Champs-Elysées.
+            </p>
           </div>
         </div>
         <div class="hidden animate-fade-in">
