--- a/my-project/index.html
+++ b/my-project/index.html
@@ -23,6 +23,7 @@
     rel="stylesheet"
   />
   <nav
+    id="Navigation Bar"
     class="fixed bg-yellow-500 text-slate-900 font-hubballi text-4xl justify-around flex w-full z-10"
   >
     <a
