--- a/my-project/index.html
+++ b/my-project/index.html
@@ -132,7 +132,7 @@
     <span id="attractions"></span>
     <br class="select-none" />
     <br class="select-none" />
-    <section class="section">
+    <section class="attractions">
       <br class="select-none" />
       <br class="select-none" />
 
@@ -437,7 +437,7 @@
     <span id="foods"></span>
     <br class="select-none" /><br class="select-none" />
 
-    <section>
+    <section class="Foods">
       <h2 class="font-parisienne text-center text-5xl header select-none">
         Foods
       </h2>
