--- a/my-project/index.html
+++ b/my-project/index.html
@@ -102,11 +102,9 @@
       href="#hotels"
       >Hotels</a
     >
-    <button
-      class="btn hover:scale-110 transition-all navigation-bar select-none"
-    >
+    <a class="btn hover:scale-110 transition-all navigation-bar select-none">
       Change Theme
-    </button>
+    </a>
   </nav>
   <span id="header"></span>
   <body>
@@ -141,17 +139,10 @@
         class="map select-none"
         src="https://media.discordapp.net/attachments/888538228100038706/960315382399397948/unknown.png"
       />
-      <h3 class="regionname font-black -translate-y-96 font-parisienne">
-        Centre-Val de Loire
-      </h3>
-      <div
-        class="
-          hide
-          float-right
-          border-slate-500 border-2
-          -translate-y-96 -translate-x-96
-        "
-      >
+      <div class="regionname font-black -translate-y-96 font-parisienne">
+        <h4>Centre-Val de Loire</h4>
+      </div>
+      <div class="hide float-right -translate-y-96 -translate-x-96">
         <p>I love amongus</p>
 
         <br class="select-none" />
@@ -170,14 +161,7 @@
       >
         Nord-Pas-de-Calais
       </h3>
-      <div
-        class="
-          hide1
-          float-right
-          border-slate-500 border-2
-          -translate-y-96 -translate-x-96
-        "
-      >
+      <div class="hide1 float-right -translate-y-96 -translate-x-96">
         <p>I love amongus</p>
         <img
           class="regionimg"
@@ -821,7 +805,7 @@
               duration-150
               hover:translate-y-6 hover:translate-x-6
               max-h-96
-              meal
+              meal1
             "
           >
             <h3 class="text-center">Bœuf bourguignon</h3>
@@ -854,7 +838,7 @@
               border-yellow-500
               duration-150
               hover:translate-y-6 hover:translate-x-6
-              meal
+              meal1
             "
           >
             <h3 class="text-center">Chocolate soufflé</h3>
@@ -886,7 +870,7 @@
               border-yellow-500
               duration-150
               hover:translate-y-6 hover:translate-x-6
-              meal
+              meal1
             "
           >
             <h3 class="text-center">Flamiche</h3>
@@ -921,7 +905,7 @@
               duration-150
               hover:translate-y-6 hover:translate-x-6
               max-h-96
-              meal
+              meal2
             "
           >
             <h3 class="text-center">Confit De Canard</h3>
@@ -952,7 +936,7 @@
               border-yellow-500
               duration-150
               hover:translate-y-6 hover:translate-x-6
-              meal
+              meal2
             "
           >
             <h3 class="text-center">Tarte Tatin</h3>
@@ -983,7 +967,7 @@
               border-yellow-500
               duration-150
               hover:translate-y-6 hover:translate-x-6
-              meal
+              meal2
             "
           >
             <h3 class="text-center">Ratatouille</h3>
