--- a/my-project/index.html
+++ b/my-project/index.html
@@ -525,7 +525,7 @@
       </h2>
       <span id="foods">
         <div
-          class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48 min-h-96 first-letter:food"
+          class="flex flex-wrap align-top justify-around h-96 mb-48 min-h-96 food"
         >
           <div
             class="bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 meal"
@@ -589,7 +589,7 @@
         </div>
 
         <div
-          class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48 min-h-124 food"
+          class="flex flex-wrap align-top justify-around h-96 mb-48 min-h-124 food"
         >
           <div
             class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 max-h-96 meal"
@@ -633,7 +633,7 @@
             </p>
           </div>
           <div
-            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 meal1"
+            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 meal"
           >
             <h3 class="text-center">Flamiche</h3>
             <div class="w-72">
@@ -653,11 +653,9 @@
             </p>
           </div>
         </div>
-        <div
-          class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48 food"
-        >
+        <div class="flex flex-wrap align-top justify-around h-96 mb-48 food">
           <div
-            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 max-h-96 meal2"
+            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 max-h-96 meal"
           >
             <h3 class="text-center">Confit De Canard</h3>
             <div class="w-72">
@@ -676,7 +674,7 @@
           </div>
 
           <div
-            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 meal2"
+            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 meal"
           >
             <h3 class="text-center">Tarte Tatin</h3>
             <div class="w-72">
@@ -695,7 +693,7 @@
             </p>
           </div>
           <div
-            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 meal2"
+            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 meal"
           >
             <h3 class="text-center">Ratatouille</h3>
             <div class="w-72">
