--- a/my-project/index.html
+++ b/my-project/index.html
@@ -243,7 +243,7 @@
           translate-x-80
           -translate-y-56
           font-parisienne
-          w-24
+          w-14
         "
       >
         <a
@@ -291,6 +291,54 @@
         <img
           class="regionimg"
           src="https://images.france.fr/zeaejvyq9bhj/6aWJZqj1gkUYUakoIeYYaA/70eff9f0e09f9b46916dc790cfde00f1/hs0616_godin.jpg?w=1120&h=490&q=70&fm=webp&fit=fill"
+        />
+      </div>
+      <h3 class="regionname7 font-black font-parisienne w-8">
+        <a
+          href="https://www.isula.corsica/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Corse</a
+        >
+      </h3>
+      <div class="hide7 float-right border-slate-500 border-2">
+        <p>wwwwwww</p>
+        <img
+          class="regionimg"
+          src="https://www.worldatlas.com/r/w768/upload/49/32/41/ajaccio-corsica-france-lsantek.jpg"
+        />
+      </div>
+      <h3 class="regionname8 font-black font-parisienne w-20">
+        <a
+          href="https://www.france.fr/en/regions-and-cities/franche-comte-land-contrasts"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Franche-Comté</a
+        >
+      </h3>
+      <div class="hide8 float-right border-slate-500 border-2">
+        <p>ogdsgyrus</p>
+        <img
+          class="regionimg"
+          src="https://about-france.com/photos/besancon.jpg"
+        />
+      </div>
+      <h3 class="regionname9 font-black font-parisienne w-24">
+        <a
+          href="https://www.france.fr/en/regions-and-cities/burgundy-history-open-air"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Bourgogne</a
+        >
+      </h3>
+      <div class="hide9 float-right border-slate-500 border-2">
+        <p>dskjshgsho</p>
+        <img
+          class="regionimg"
+          src="https://europe.tv5monde.com/sites/tv5_locaux/files/styles/galerie_item/public/2020-03/Bourgogne-coeur-france-4.jpg?h=acafca0a&itok=EWzpcwsk"
         />
       </div>
     </section>
