--- a/my-project/index.html
+++ b/my-project/index.html
@@ -341,6 +341,21 @@
           src="https://europe.tv5monde.com/sites/tv5_locaux/files/styles/galerie_item/public/2020-03/Bourgogne-coeur-france-4.jpg?h=acafca0a&itok=EWzpcwsk"
         />
       </div>
+      <h3 class="regionname10 font-black font-parisienne w-24">
+        <a
+          href="https://www.france.fr/en/regions-and-cities/auvergne-heart-nature"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Auvergne
+        </a>
+      </h3>
+      <div class="hide10 float-right border-slate-500 border-2">
+        <p>drhkjrspjhkyt</p>
+        <img
+          class="regionimg"
+          src="https://about-france.com/regions/auvergne-mountains.jpg"
+        />
+      </div>
     </section>
     <span id="attractions"></span>
     <br class="select-none" />
