--- a/my-project/index.html
+++ b/my-project/index.html
@@ -797,7 +797,7 @@
         </div>
       </div>
       <div
-        class="grid grid-flow-col grid-cols-5 grid-rows-[900px_minmax(900px,_5fr)_100px] gap-y-16"
+        class="grid grid-flow-col grid-cols-5 grid-rows-[900px_minmax(900px,_5fr)_100px] gap-y-16 attractions"
       >
         <div
           class="bg-black border-8 mx-48 border-yellow-500 rounded-xl text-6xl hover:translate-x-4 hover:translate-y-4 duration-100 col-start-1 col-span-4 row-span-1 attraction"
