--- a/my-project/index.html
+++ b/my-project/index.html
@@ -65,7 +65,7 @@
     <header>
       <div class="bg-no-repeat bg-cover h-screen -z-10 headerheaderthing">
         <h1
-          class="text-white text-center text-9xl font-parisienne hover:translate-y-20 hover:scale-110 transition-all translate-y-20 header-title select-none btn"
+          class="text-white text-center text-9xl font-parisienne hover:translate-y-20 hover:scale-110 transition-all translate-y-20 header-title select-none btn header pt-16"
         >
           Welcome to France!
         </h1>
@@ -1161,7 +1161,7 @@
       </h2>
       <div>
         <p
-          class="text-center font-cormorant_garamond text-2xl border-black border-2 bg-white rounded-sm"
+          class="text-center font-cormorant_garamond text-2xl border-black border-2 bg-white rounded-sm transportationtext"
         >
           France has some of the oldest transportation systems. It one of the
           densest networks in the world, with 146 kilometers of roads and 6.2
@@ -1176,7 +1176,7 @@
         <h4 class="font-parisienne text-4xl ml-6 select-none">Railroads</h4>
 
         <p
-          class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-10"
+          class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-10 transportationtext"
         >
           <img
             src="https://www.expatica.com/app/uploads/sites/5/2014/05/tram-orleans-france.jpg"
@@ -1196,7 +1196,7 @@
       <div>
         <h4 class="font-parisienne text-4xl ml-6 select-none">Roads</h4>
         <p
-          class="font-cormorant_garamond text-2xl inline-block text-center translate-y-10"
+          class="font-cormorant_garamond text-2xl inline-block text-center translate-y-10 transportationtext"
         >
           <img
             src="https://media.worldnomads.com/Travel-Safety/france/francedriving-DanielCandal.jpg"
@@ -1217,7 +1217,7 @@
       <div>
         <h4 class="font-parisienne text-4xl ml-6 select-none">Waterways</h4>
         <p
-          class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-14 mr-6"
+          class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-14 mr-6 transportationtext"
         >
           <img
             src="https://www.cruisetradenews.com/resources/uploads/2019/06/croisi-europe-river-cruise.jpg"
@@ -1237,7 +1237,7 @@
           Marine Transport
         </h4>
         <p
-          class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-10 ml-6"
+          class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-10 ml-6 transportationtext"
         >
           <img
             src="https://images.squarespace-cdn.com/content/v1/5cb9ccd20b77bd235df53651/1558598516643-1AI147QS4JA1QIQTGJQO/image-asset.jpeg?format=1500w"
@@ -1259,7 +1259,7 @@
       <div>
         <h4 class="font-parisienne text-4xl ml-6 select-none">Air Travel</h4>
         <p
-          class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-10 ml-6"
+          class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-10 ml-6 transportationtext"
         >
           <img
             src="https://cdn.travelpulse.com/images/99999999-9999-9999-9999-999999999999/b5770bfe-f750-e55f-4dc7-6310d5c0c5f7/630x355.jpg"
